--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 deadpool-postgres = { version = "0.10.5", default-features = false, features = [
   "rt_tokio_1",
 ] }
+openssl = { version = "0.10.57", features = ["vendored"] }
 refinery = { version = "0.8.11", default-features = false, features = [
   "tokio-postgres",
 ] }
