--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ deadpool-postgres = { version = "0.10.5", default-features = false, features = [
   "rt_tokio_1",
 ] }
 openssl = { version = "0.10.57", features = ["vendored"] }
+prost = { version = "0.12.1" }
 refinery = { version = "0.8.11", default-features = false, features = [
   "tokio-postgres",
 ] }
-reqwest = { version = "0.11.20", default-features = false }
+reqwest = { version = "0.11.20", default-features = false, features = ["json", "default-tls"] }
 sea-query = { version = "0.30.1", default-features = false, features = [
   "derive",
   "backend-postgres",
@@ -30,9 +31,16 @@ sea-query-postgres = { version = "0.4.0", default-features = false, features = [
 ] }
 serde = { version = "1.0.188", default-features = false, features = ["derive"] }
 serde_json = { version = "1.0.107", default-features = false }
+tonic = { version = "0.10.0" }
 tracing = { version = "0.1.37", default-features = false, features = ["log"] }
 tracing-subscriber = { version = "0.3.17", default-features = false, features = [
   "tracing-log",
   "fmt",
 ] }
 uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
+
+[build-dependencies]
+tonic-build = { version = "0.10.0", default-features = false, features = [
+  "prost",
+  "transport",
+] }
