--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ deadpool-postgres = { version = "0.10.5", default-features = false, features = [
   "rt_tokio_1",
 ] }
 openssl = { version = "0.10.57", features = ["vendored"] }
+postgres-openssl = "0.5.0"
 prost = { version = "0.12.1" }
 refinery = { version = "0.8.11", default-features = false, features = [
   "tokio-postgres",
