--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,7 @@ actix-cors = { version = "0.6.4", default-features = false }
 actix-web = { version = "4.4.0", default-features = false, features = [
   "macros",
 ] }
-async-stripe = { git = "https://github.com/Maxi-Teme/async-stripe.git", features = [
-  "runtime-tokio-hyper",
-] }
+async-stripe = { version = "0.38", features = ["runtime-tokio-hyper"] }
 chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
 deadpool-postgres = { version = "0.10.5", default-features = false, features = [
   "rt_tokio_1",
@@ -21,7 +19,10 @@ prost = { version = "0.12.1" }
 refinery = { version = "0.8.11", default-features = false, features = [
   "tokio-postgres",
 ] }
-reqwest = { version = "0.11.20", default-features = false, features = ["json", "default-tls"] }
+reqwest = { version = "0.11.20", default-features = false, features = [
+  "json",
+  "default-tls",
+] }
 sea-query = { version = "0.30.1", default-features = false, features = [
   "derive",
   "backend-postgres",
